--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "vite": "^5.4.8"
   },
   
-    "homepage": "https://<ayesha-react-project>.github.io/<repository-name>"
+    "homepage": "https://<ayeshahanif12>.github.io/<ayesha-react-project>"
 
   
 }
