--- a/package.json
+++ b/package.json
@@ -9,12 +9,8 @@
     "start": "react-scripts start",
     "lint": "eslint .",
     "preview": "vite preview",
-  
-  "predeploy": "npm run build",
-  "deploy": "gh-pages -d build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject"
-
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.10.4",
@@ -37,8 +33,5 @@
     "globals": "^15.9.0",
     "vite": "^5.4.8"
   },
-  
-    "homepage": "https://<ayeshahanif12>.github.io/<ayesha-react-project>"
-
-  
+  "homepage": "https://<ayeshahanif12>.github.io/<ayesha-react-project>"
 }
